<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_drawer_item_home" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/rabbit"
            android:title="@string/nav_drawer_item_products" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/nav_drawer_item_cart"/>

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/nav_drawer_item_logout"/>

    </group>
</menu>